# label-free

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  optuna_hyperparams.py  plan.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: api.md  examples.md  index.md  metrics.md
examples/: basic_usage.py  comparative_evaluation.py  ireos.py  mass_exceedance.py  mass_volume.py  metric_signal_analysis.ipynb  metric_tuning.ipynb  optuna_hyperparameter.py  sireos.py  stability.py  visualization_example.py
labelfree/: __init__.py  base.py  excess_mass.py  ireos.py  mass_volume.py  stability.py  utils.py
labelfree/metrics/: __init__.py  asoi.py  autouad.py  consensus.py  ireos.py  laplacian.py  mass_exceedance.py  mass_volume.py  score_cluster.py  sireos.py  stability.py
labelfree/metrics/compactness/: masses.py
labelfree/metrics/stability/: correlation.py
labelfree/utils/: __init__.py  computation.py  decorator.py  normalization.py  validation.py
tests/: __init__.py  shuttle_data.py  synthetic_data.py  test_asoi.py  test_autouad.py  test_consensus.py  test_excess_mass.py  test_excess_mass_reference.py  test_ireos.py  test_ireos_reference.py  test_laplacian.py  test_mass_volume.py  test_mass_volume_reference.py  test_score_cluster.py  test_sireos.py  test_sireos_reference.py  test_stability.py
tests/test_metrics_stability/: test_kendalls_tau.py  test_masses.py  test_spearmans_rho.py
