[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labelfree"
version = "0.0.1"
description = "Label-free Evaluation Metrics for Anomaly Detectors"
authors = [
  { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0"
]

[project.optional-dependencies]
dev = ["black", "ruff", "pytest>=6.0.0"]
examples = ["matplotlib>=3.0.0", "seaborn>=0.11.0"]
all = ["black", "ruff", "pytest>=6.0.0", "matplotlib>=3.0.0", "seaborn>=0.11.0"]

[project.urls]
"Homepage" = "https://github.com/OliverHennhoefer/label-free"
"Bugs" = "https://github.com/OliverHennhoefer/label-free/issues"
