[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labelfree"
version = "0.0.1"
description = "Label-free metrics for unsupervised anomaly detector evaluation"
authors = [
  { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
examples = [
    "numba>=0.66",
    "oddball>=1.4",
    "optuna>=4",
    "pandas>=2.2",
    "pyod>=1.1",
]
