[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["3394053.pdf"]

[tool.hatch.version]
path = "labelfree/__init__.py"

[project]
name = "labelfree"
dynamic = ["version"]
description = "Label-free metrics for unsupervised anomaly detector evaluation"
authors = [
  { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["anomaly-detection", "model-selection", "unsupervised-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pre-commit>=4.2", "pytest>=8", "ruff>=0.12"]
docs = ["zensical==0.0.47"]
examples = [
    "numba>=0.66",
    "oddball>=1.4",
    "optuna>=4",
    "pandas>=2.2",
    "pyod>=1.1",
]

[project.urls]
Documentation = "https://oliverhennhoefer.github.io/label-free/"
Issues = "https://github.com/OliverHennhoefer/label-free/issues"
Repository = "https://github.com/OliverHennhoefer/label-free"
